Make it more beautiful and elegant! Added customizations to the sidebar and author-profile.
Getting there...

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -19,7 +19,7 @@
   @include breakpoint($large) {
     float: left;
     width: calc(#{$right-sidebar-width-narrow} - 1em);
-    opacity: 0.75;
+    opacity: 0.87;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out;
 
@@ -63,7 +63,7 @@
 
   img {
     width: 100%;
-    
+
     &.emoji {
       width: 20px;
       height: 20px;
@@ -127,7 +127,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 150px;
     border-radius: 50%;
 
     @include breakpoint($large) {
@@ -172,6 +172,7 @@
 
 .author__bio {
   margin: 0;
+  text-decoration-style: solid;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -315,4 +316,3 @@
     margin-right: initial;
   }
 }
-
