--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -41,7 +41,7 @@
 
   <div class="author__urls-wrapper">
     <button class="btn btn--inverse">{{ site.data.ui-text[site.locale].follow_label | remove: ":" | default: "Follow" }}</button>
-    <ul class="author__urls social-icons">
+    <!-- <ul class="author__urls social-icons"> -->
       {% if author.location %}
         <li itemprop="homeLocation" itemscope itemtype="https://schema.org/Place">
           <i class="fas fa-fw fa-map-marker-alt" aria-hidden="true"></i> <span itemprop="name">{{ author.location }}</span>
@@ -51,7 +51,7 @@
       {% if author.links %}
         {% for link in author.links %}
           {% if link.label and link.url %}
-            <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
+            <a href="{{ link.url }}" rel="nofollow noopener noreferrer" class="social-icons"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i>{{ link.label }}</a>&nbsp;
           {% endif %}
         {% endfor %}
       {% endif %}
@@ -258,6 +258,6 @@
       {% endif %}
 
       {% include author-profile-custom-links.html %}
-    </ul>
+    <!-- </ul> -->
   </div>
 </div>
