Increased page width

--- a/_sass/minimal-mistakes/skins/myawesomeskin.scss
+++ b/_sass/minimal-mistakes/skins/myawesomeskin.scss
@@ -14,6 +14,10 @@ $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
 
+$right-sidebar-width-narrow: 150px !default;
+$right-sidebar-width: 250px !default;
+$right-sidebar-width-wide: 350px !default;
+
 $general-link-hover-color: #0074D9;
 $masthead-hover-color: #FF4136;
 $author-name-hover: #39CCCC;
