Changed font size and family

--- a/_sass/minimal-mistakes/skins/myawesomeskin.scss
+++ b/_sass/minimal-mistakes/skins/myawesomeskin.scss
@@ -18,6 +18,9 @@ $right-sidebar-width-narrow: 150px !default;
 $right-sidebar-width: 250px !default;
 $right-sidebar-width-wide: 350px !default;
 
+$sans-serif: "Noto Sans", -apple-system, BlinkMacSystemFont, "Roboto",
+  "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+
 $general-link-hover-color: #0074D9;
 $masthead-hover-color: #FF4136;
 $author-name-hover: #39CCCC;
