--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,8 +27,23 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          {% if page.read_time %}
-            <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+          {% if page.read_time or page.last_modified_at or page.date %}
+            <p class="page__meta">
+            {% if page.read_time%}
+              <i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}
+            {% endif %}
+            {% if page.last_modified_at %}
+              {% if page.read_time%}
+                |
+              {% endif %}
+              <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> <time datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: "%B %d, %Y" }}</time>
+            {% elsif page.date %}
+              {% if page.read_time%}
+                |
+              {% endif %}
+              <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>
+            {% endif %}
+            </p>
           {% endif %}
         </header>
       {% endunless %}
@@ -46,25 +61,11 @@ layout: default
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
-      <section>
-        {% for post in site.posts limit:4 %}
-          {% if post.id == page.id %}
-            <h3 style='text-align:center'>Thanks for reading! <i class="far fa-smile-beam"></i></h3>
-            {% break %}
-          {% endif %}
-        {% endfor %}
-      </section>
-
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
         {% include page__taxonomy.html %}
-        {% if page.last_modified_at %}
-          <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: "%B %d, %Y" }}</time></p>
-        {% elsif page.date %}
-          <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
-        {% endif %}
       </footer>
 
       {% if page.share %}{% include social-share.html %}{% endif %}
